# trajopt

./: CMakeLists.txt
src/sco/: CMakeLists.txt  bpmpd_interface.cpp  bpmpd_interface.hpp
src/trajopt/: voxel_collision_checker.cpp
